--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
+serde = { version = "1.0.133", features = ["derive"] }
+serde_json = "1.0.75"
